--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,7 +91,7 @@ footer {
 }
 
 
-#navigation .site-container {
+#navItems {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -104,7 +104,58 @@ footer {
 
 #navMenu {
   display: none;
+  align-items: center;
   justify-content: center;
+}
+
+
+/* product list and company info*/
+
+#productList, #companyInfo {
+    display: flex;
+    justify-content: space-between;
+    margin: 3rem 0 0 0;
+}
+
+
+.product {
+  width: 30%;
+}
+
+.product-image-container {
+  border: 4px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0;
+  height: 9rem;
+}
+
+.product-image-container img {
+  max-width: 9rem; 
+}
+
+.product span {
+  background-color: black;
+  display: block;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+.info-item {
+  width: 35%;
+  padding-bottom: 4rem;
+}
+
+.info-item .info-title {
+  background-color: black;
+  display: block;
+  padding: 1rem 2rem;
+}
+
+.info-item .info-detail {
+  color: black;
+  display: block;
 }
 
 
