--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-  font-family: Helvetica, sans-serif;
   color: white;
+  font-family: Helvetica, sans-serif;
 }
 
 div, header, footer {
@@ -14,8 +14,8 @@ div, header, footer {
 
 /* common class properties */
 .site-container {
-  max-width: 960px;
   margin: 0 auto;
+  max-width: 960px;
 }
 
 .text-ucase {
@@ -29,8 +29,8 @@ header, footer {
 }
 
 header .site-container, footer .site-container {
-  display: flex;
   align-items: center;
+  display: flex;
   height: 100%;
 }
 
@@ -91,9 +91,9 @@ footer {
 }
 
 
-#navItems {
-  display: flex;
+#nav-items {
   align-items: center;
+  display: flex;
   justify-content: space-between;
 }
 
@@ -102,19 +102,19 @@ footer {
   text-decoration: none;
 }
 
-#navMenu {
-  display: none;
+#nav-menu {
   align-items: center;
+  display: none;
   justify-content: center;
 }
 
 
 /* product list and company info*/
 
-#productList, #companyInfo {
-    display: flex;
-    justify-content: space-between;
-    margin: 3rem 0 0 0;
+#product-list, #company-info {
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0 0 0;
 }
 
 
@@ -123,12 +123,12 @@ footer {
 }
 
 .product-image-container {
+  align-items: center;
   border: 4px solid black;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem 0;
   height: 9rem;
+  justify-content: center;
+  padding: 2rem 0;
 }
 
 .product-image-container img {
