--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,3 @@
-
 html {
   font-size: 18px;
 }
@@ -8,9 +7,11 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
+/* for development
 div, header, footer {
   border: 1px solid green;
 }
+*/
 
 /* common class properties */
 .site-container {
@@ -49,6 +50,15 @@ footer {
   height: 5rem;
 }
 
+@media only screen and (max-width: 470px) {
+  /* mobile view */
+  footer  {
+    display: flex;
+    justify-content: center;
+  }
+  
+}
+
 
 /* banner */
 
@@ -80,6 +90,31 @@ footer {
   padding-top: 0.25rem;
 }
 
+@media only screen and (max-width: 470px) {
+  /* mobile view */
+  #banner {
+    height: 15rem;
+  } 
+
+  #banner .site-container {
+    padding-top: 10rem;
+  }  
+  
+  #feature {
+    padding: 1rem 2rem;
+    width: inherit;
+  }
+
+  #feature h4 {
+    font-size: 0.77rem;
+  }
+
+  #feature h1 {
+    font-size: 1rem;
+    padding-top: 0.25rem;
+  }
+}
+
 /* navigation */
 
 #navigation {
@@ -89,7 +124,10 @@ footer {
 #navigation nav {
   padding: 0.75rem 0;
 }
-
+#navigation a {
+  color: white;
+  text-decoration: none;
+}
 
 #nav-items {
   align-items: center;
@@ -97,15 +135,21 @@ footer {
   justify-content: space-between;
 }
 
-#navigation a {
-  color: white;
-  text-decoration: none;
-}
-
 #nav-menu {
   align-items: center;
   display: none;
   justify-content: center;
+}
+
+@media only screen and (max-width: 1024px) {
+  /* tablet view */
+  #nav-items {
+    display: none;
+  } 
+
+  #nav-menu {
+    display: flex;
+  }
 }
 
 
@@ -117,8 +161,8 @@ footer {
   margin: 3rem 0 0 0;
 }
 
-
 .product {
+  display: block;
   width: 30%;
 }
 
@@ -158,15 +202,48 @@ footer {
   display: block;
 }
 
+@media only screen and (max-width: 1024px) {
+  /* tablet view */
+  .product {
+    width: 47%;
+  }
 
-/* --- */
-/* responsive media queries */
-/* --- */
+  #prd-thermal-glasses {
+    display: none;
+  }
+}
 
-@media only screen and (min-width: 449) and (max-width: 752px) {
- /* tablet portrait viewing */
+@media only screen and (max-width: 470px) {
+  /* mobile view */
+  #product-list {
+    justify-content: center;
+  }
+
+  .product {
+    width: 90%;
+  }
+
+  #prd-cellular-watch {
+    display: none;
+  }
+
+   #company-info {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 4rem;
+  }
+
+
+  .info-item {
+    width: 90%;
+    padding-bottom: 0;
+  }
+
+  .info-item .info-detail {
+    padding-bottom: 0.5rem;
+  }
 }
- 
-@media only screen and (max-width: 448) {
- /* mobile device portrait viewing */
-}
+
+/* end style.css */
